// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactInspectDataHandler component should render properly if data is a function 1`] = `<ReactInspectCollapseHandler />`;

exports[`ReactInspectDataHandler component should render properly if data is a number 1`] = `
<ReactInspectValue
  type="number"
>
  666
</ReactInspectValue>
`;

exports[`ReactInspectDataHandler component should render properly if data is a string 1`] = `
<ReactInspectValue
  type="string"
>
  "cawabongaaa!"
</ReactInspectValue>
`;

exports[`ReactInspectDataHandler component should render properly if data is an array 1`] = `
<span>
  <ReactInspectPunctuation>
    [
  </ReactInspectPunctuation>
  <ReactInspectCollapseHandler />
  <ReactInspectPunctuation>
    ]
  </ReactInspectPunctuation>
</span>
`;

exports[`ReactInspectDataHandler component should render properly if data is an object 1`] = `
<span>
  <ReactInspectPunctuation>
    {
  </ReactInspectPunctuation>
  <ReactInspectCollapseHandler />
  <ReactInspectPunctuation>
    }
  </ReactInspectPunctuation>
</span>
`;

exports[`ReactInspectDataHandler component should render properly if data is null 1`] = `
<ReactInspectValue
  type="keyword"
>
  null
</ReactInspectValue>
`;

exports[`ReactInspectDataHandler component should render properly if data is undefined 1`] = `
<ReactInspectValue
  type="keyword"
>
  undefined
</ReactInspectValue>
`;
